<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".ui.task.TaskOptionsDialogFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.button.MaterialButton android:id="@+id/button_changeImage"
            style="@style/FragmentTaskOptions.Action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_task_detailed_options_action_image_change_text"
            app:icon="@drawable/ic_image_search_24"
            app:iconGravity="textStart"/>

        <com.google.android.material.button.MaterialButton android:id="@+id/button_removeImage"
            style="@style/FragmentTaskOptions.Action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_task_detailed_options_action_image_remove_text"
            app:icon="@drawable/ic_remove_image_24"
            app:iconGravity="textStart"/>

        <com.google.android.material.button.MaterialButton android:id="@+id/button_delete"
            style="@style/FragmentTaskOptions.Action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_task_detailed_options_action_delete_text"
            app:backgroundTint="?colorError"
            app:iconGravity="textStart"
            app:icon="@drawable/ic_delete_24"/>

    </LinearLayout>

</ScrollView>